created subscription page

--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
     <main>
       <section>
         <div class="notice">
-          <p class="lead"> Vortex
-            Technology does NOT manufacture, provide, sell, or service
+          <p class="lead"> Vortex Technology does NOT manufacture, provide, sell, or service
             any tablets, cellular/mobile telephones, or optical devices.</p>
         </div>
         <center><p class="display-6">Vortex techonologies, Woodland Hills, CA., U.S.A.</p>
@@ -98,6 +97,8 @@ the founder of the PRIVACY Forum. He created the PRIVACY Forum in 1992,
           The Network Neutrality Squad (NNSquad) is an open-membership, open-source effort, enlisting the Internet's users to help keep the Internet's operations fair and unhindered from unreasonable restrictions.  
 
 The project's focus includes detection, analysis, and incident reporting of any anticompetitive, discriminatory, or other restrictive actions on the part of Internet Service Providers (ISPs) or affiliated entities, such as the blocking or disruptive manipulation of applications, protocols, transmissions, or bandwidth; or other similar behaviors not specifically requested by their customers. </p>
+<center><a class="lead " href="./html/subscribe.html" style="text-decoration: underline;"> click here to subscribe</a>
+</center>          
       </section>
       
       <section class="links">
